<resources>
    <string name="app_name">Admin Panel-Alıntılar</string>
    <string name="header_app_name">Alıntılar ve Sözler</string>
    <string name="conne_msg1">Ağ Bağlantısı Yok!!!</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="menu_quotes">Tüm Alıntılar</string>
    <string name="menu_author">Yazarlar-Kişiler</string>
    <string name="menu_category">Kategoriler</string>
    <string name="menu_favorites">Favoriler</string>
    <string name="menu_images">Resim ekle</string>
    <string name="menu_ads">Ads Settings</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="settings_notification">Bildirimler</string>
    <string name="settings_rate">Bizi puanlayın</string>
    <string name="settings_share">Bizi paylaşın</string>
    <string name="settings_privacy">Gizlilik politikası</string>
    <string name="settings_contact">Bizimle iletişime geçin</string>
    <string name="settings_app_version">V1.5</string>
    <string name="settings_app_developer">TK-2021</string>
    <string name="menu_log_out">Çıkış</string>
    <string name="logout_msg">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="back_key">Çıkmak için lütfen GERİ yi tekrar tıklayın</string>

    <string name="download_this_app">"Alıntılar'ı ücretsiz indirin http://bit.do/tgrlkrquotesapp"</string>
    <string name="share_this_app">Uygulamayı paylaş</string>
    <string name="copy_to_clipboard">Alıntı panoya kopyalandı.</string>
    <string name="add_favorite">Favorilere Eklendi</string>
    <string name="remove_favorite">Favorilerden Çıkarıldı</string>
    <string name="share">Paylaş</string>

    <string name="quote_of_the_day">Günün Alıntısı</string>

    <string name="reload">Tekrar yükle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>